# sec-af-cs

./: .env.example  .gitignore  Dockerfile  Dockerfile.local  LICENSE  README.md  docker-compose.local.yml  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  test_harness.py
docs/: DESIGN.md  REFACTOR-PLAN.md
exampl/: benchmark-analysis.json  dvga-benchmark-result.json  result.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
prompts/: policy_eval.txt  remediation.txt
prompts/hunt/: api_security.txt  auth.txt  business_logic.txt  config_secrets.txt  crypto.txt  data_exposure.txt  dos.txt  enrich_finding.txt  injection.txt  logic.txt  scan_locations.txt  ssrf.txt  supply_chain.txt  xss.txt
prompts/prove/: chain_builder.txt  cross_service.txt  dast_verifier.txt  dep_reachability.txt  exploit.txt  sanitization.txt  tracer.txt  verdict.txt
prompts/recon/: architecture.txt  config_scanner.txt  data_flow.txt  dependencies.txt  security_context.txt
src/agentfield/: __init__.pyi
src/pydantic/: __init__.pyi
src/sec_af/: __init__.py  app.py  audit.py  config.py  context.py  diff_analysis.py  harness.py  policies.py  (+3 more)
tests/: __init__.py  conftest.py  test_compliance.py  test_compliance_report.py  test_config.py  test_dedup.py  test_diff_analysis.py  test_hunt_crypto.py  test_hunt_include_paths.py  test_monitoring.py  test_policies.py  test_prove_phase_demotion.py  test_recon_findings.py  test_schemas.py  test_scoring.py  test_strategy_selection.py
(+70 files in other folders)
